--- a/index.html
+++ b/index.html
@@ -158,9 +158,9 @@
             "memory.pouchdb.js",
             "memory.spimedb.js",
             "list.js",
-            //"prompt.js"
+            "prompt.js",
             //"map2d.js",
-            //"spacegraph.js"
+            "spacegraph.js"
         ], () => {
 
             $('#loading').hide();
