add Skeleton CSS

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <div id="right-menu" class="btn-grp">
     <!-- DARK / LIGHT THEME TOGGLE -->
     <div id="theme-switcher" class="view-btn" title="Switch Theme (Dark/Light)">
-        <i class="fa fa-fw fa-tint"></i>
+        <i class="fa fa-fw fa-lightbulb-o"></i>
     </div>
     <!-- FONT SLIDER TOGGLE -->
     <div id="font-size" class="view-btn" title="Change Font Size">
